                                                         -*- coding: utf-8 -*-
Changes with Apache 2.5.0

  *) htpasswd, htdbm: Put full 48bit of entropy into salt, improve
     error handling. Add some of htpasswd's improvements to htdbm,
     e.g. warn if password is truncated by crypt(). [Stefan Fritsch]

  *) ab: add TLS1.1/TLS1.2 options to -f switch, and adapt output
     to more accurately report the negotiated protocol. PR 53916.
     [Nicolás Pernas Maradei <nico emutex com>, Kaspar Brand]

  *) mod_systemd: New module, for integration with systemd on Linux.
     [Jan Kaluza <jkaluza redhat.com>]

  *) core: ErrorDocument now works for requests without a Host header.
     PR 48357.  [Jeff Trawick]

  *) --with-module: Fix failure to integrate them into some existing
     module directories.  PR 40097.  [Jeff Trawick]

  *) mod_headers: New params: %l for load averages, %i for an
     idle percentage rating of httpd, and %b for a busy percentage
     rating. [Jim Jagielski]

  *) core: New functions to obtain load parameters: ap_get_sload()
     and ap_get_loadavg(). [Jim Jagielski]

  *) mod_cache_socache: New cache implementation backed by mod_socache
     that replaces mod_mem_cache removed from httpd v2.2. [Graham
     Leggett]

  *) mod_auth_form: Support the expr parser in the
     AuthFormLoginRequiredLocation, AuthFormLoginSuccessLocation and
     AuthFormLogoutLocation directives. [Graham Leggett]

  *) core: Add dirwalk_stat and pre_htaccess hooks, allowing mpm-itk
     to be used without patches to httpd core.  [Jeff Trawick]

  *) mod_proxy: Allow for persistence of local changes (via the
     balancer-manager) between graceful and normal restarts.
     [Jim Jagielski]

  *) mod_slotmem: New provider function, fgrab(), which forces an
     allocation of a slot. [Jim Jagielski]

  *) mod_proxy_balancer: The nonce is only derived from the UUID iff
     not set via the 'nonce' balancer param. [Jim Jagielski]
