@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) htpasswd, htdbm: Add support for bcrypt algorithm (requires
+     apr-util 1.5 or higher). PR 49288. [Stefan Fritsch]
+
   *) htpasswd, htdbm: Put full 48bit of entropy into salt, improve
      error handling. Add some of htpasswd's improvements to htdbm,
      e.g. warn if password is truncated by crypt(). [Stefan Fritsch]
